feat: заложить channel spi фазы 4
