# core/src/main/java/ru/university/assistant/channel/api/ReplyMode.java
@@ -1,0 +1,6 @@
+package ru.university.assistant.channel.api;
+
+public enum ReplyMode {
+    NEW,
+    EDIT_LAST
+}
